<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Filmoteka</string>
    <string name="username_hint">Nazwa użytkownika</string>
    <string name="password_hint">Hasło</string>
    <string name="repeat_password_hint">Powtórz hasło</string>
    <string name="button_signup">Zarejestruj się</string>
    <string name="button_signin_text">Zaloguj się</string>
    <string name="button_signin">Masz już konto? Zaloguj się</string>
    <string name="button_signup_text">Nie masz jeszcze konta? Zarejestruj się</string>
    <string name="name_hint">Imię</string>
    <string name="surname_hint">Nazwisko</string>
    <string name="email_hint">E-mail</string>
    <string name="toast_fields">Wszystkie pola są wymagane</string>
    <string name="toast_passwords">Hasła są różne</string>
    <string name="toast_register">Zarejestrowano pomyślnie</string>
    <string name="login_succesful">Pomyślnie zalogowano</string>
    <string name="login_not_valid">Niepoprawna nazwa użytkownika lub hasło</string>
    <string name="title_category">Category</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="toprated_list">Najwyżej oceniane</string>
    <string name="upcoming_list">Nadchodzące</string>
    <string name="now_playing_list">Teraz w kinach</string>
    <string name="popular_list">Popularne Teraz</string>
    <string name="description_title">Opis:</string>
    <string name="trailer_title">Zwiastun:</string>
    <string name="trailer_yt">Zobacz zwiastun na YT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="animated_ctg">Animowane</string>
    <string name="drama_ctg">Dramat</string>
    <string name="thriller_ctg">Thriller</string>
    <string name="history_ctg">Filmy historyczne</string>
    <string name="horror_ctg">Horrory</string>
    <string name="romance_ctg">Filmy romantyczne</string>
    <string name="comedy_ctg">Filmy komediowe</string>
    <string name="musical_ctg">Filmy muzyczne</string>
    <string name="sci_fi_ctg">Filmy science fiction</string>
    <string name="fantasy_ctg">Filmy fantasy</string>
    <string name="action_ctg">Filmy akcji</string>
    <string name="adventure_ctg">Filmy przygodowe</string>
    <string name="western_ctg">Westerny</string>
    <string name="criminal_ctg">Filmy kryminalne</string>
    <string name="war_ctg">Filmy wojenne</string>
    <string name="mystery_ctg">Owiane tajemnicą</string>
    <string name="tv_movie_ctg">Telewizyjne</string>
    <string name="family_ctg">Familijne</string>
    <string name="doc_ctg">Dokumentalne</string>
    <string name="other_ctg">Inne</string>
    <string name="poland">pl</string>
    <string name="en_us">en-US</string>
    <string name="US">US</string>
    <string name="add_fav">+ Dodaj do ulubionych</string>
    <string name="add_seen">+ Dodaj do zapisanych</string>
    <string name="rem_seen">- Usuń z zapisanych</string>
    <string name="add_to_watch">+ Dodaj do mojej listy</string>
    <string name="rem_to_watch">- Usuń z mojej listy</string>
    <string name="localization_permission">Na udostępnienie lokalizacji możesz zezwolić w ustawieniach telefonu.</string>
    <string name="fav_films">Ulubione filmy</string>
    <string name="seen_films">Zapisane filmy</string>
    <string name="rand_films">Losuj film</string>
    <string name="edit_profile">Edytuj profil</string>
    <string name="del_profile">Wyloguj</string>
    <string name="find_film_hint">Tytuł filmu...</string>
    <string name="rand_film_popup">Wylosuj film na dziś</string>
    <string name="back">Wróć</string>
    <string name="toast_already_in">Film już został dodany do ulubionych!</string>
    <string name="toast_added_to_fav">Film dodany do ulubionych</string>
    <string name="toast_already_in_watch">Film już został dodany do zapisanych!</string>
    <string name="toast_remove">Film został usunięty z ulubionych!</string>
    <string name="toast_remove_watched">Film został usunięty z ulubionych!</string>
    <string name="toast_remove_list">Film został usunięty z twojej listy!</string>
    <string name="toast_added_to_watch">Film dodany do zapisanych</string>
    <string name="toast_already_in_ml">Film już został dodany do Mojej Listy!</string>
    <string name="toast_added_to_ml">Film dodany do Mojej Listy</string>
    <string name="reviewer">Recenzent</string>
    <string name="add_review">Dodaj recenzję</string>
    <string name="add_rating">Oceń</string>
    <string name="favourite_list">Ulubione</string>
    <string name="watched_list">Zapisane</string>
    <string name="rem_fav">- Usuń z ulubionych</string>
    <string name="rate">Oceń film</string>
    <string name="cancel">Anuluj</string>
    <string name="random_film">Wylosowany film</string>
    <string name="to_see_films">Filmy do obejrzenia</string>
    <string name="my_list">Do obejrzenia</string>
    <string name="write_review">Napisz recenzję</string>
    <string name="review_submitted">Dodano recenzję</string>
    <string name="review_already_exists">Dodano już recenzję tego filmu</string>
    <string name="rated_movie_as">Wystawiona ocena</string>
    <string name="description">Opis</string>
    <string name="released">Wydany:</string>
    <string name="user_rating">Ocena użytkowników</string>
    <string name="cast">Obsada</string>
    <string name="recommendation">Spróbuj także</string>
    <string name="average_rating">Średnia ocen recenzentów</string>
    <string name="reviews_list">Recenzje</string>
    <string name="save">Zapisz</string>
    <string name="profile_pic_edit">Edytuj zdjęcie profilowe</string>
    <string name="location_text">Szerokość geograficzna %1$.4f   Długość geograficzna: %2$.4f   Czas: %3$tr</string>
    <string name="no_location">Brak lokalizacji</string>
    <string name="search">Wyszukaj</string>
    <string name="search_result">Wyniki wyszukiwania</string>
    <string name="toastShortName">Podane imię jest za krótkie (minimum 3 znaki)</string>
    <string name="toastShortSurname">Podane nazwisko jest za krótkie (minimum 3 znaki)</string>
    <string name="toastShortPassword">Podane hasło jest za krótkie (minimum 4 znaki)</string>
    <string name="toastInvalidEmail">Zły adres email </string>
    <string name="born">Data i miejsce urodzenia </string>
    <string name="death">Data śmierci </string>
    <string name="known_as">Znany z filmów </string>
    <string name="biography">Biografia </string>
    <string name="movies">Filmy</string>
    <string name="tvshows">Seriale</string>
    <string name="airing_today">Na antenie</string>
</resources>