<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_user"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_user"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/name"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_email"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/surname"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_user"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/email"/>
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/username"/>
    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_password_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"/>
    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/repeat_password"/>
    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signin"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/button_signup"/>
</RelativeLayout>