<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatar_img"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_background"
            android:src="@drawable/ic_profile" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputSearchFilm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:drawableLeft="@drawable/fi_search"
            android:hint="@string/find_film_hint"
            android:padding="8dp"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold" />
        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_rounded"
            android:text="@string/search" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_margin="15dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/fav_films_button"
                style="@style/GridLayoutButtonStyle"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:drawableTop="@drawable/ic_favourite"
                android:text="@string/fav_films" />


            <Button
                android:id="@+id/seen_films_button"
                style="@style/GridLayoutButtonStyle"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:drawableTop="@drawable/ic_seen"
                android:text="@string/seen_films" />


            <Button
                android:id="@+id/to_see_films_button"
                style="@style/GridLayoutButtonStyle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_to_watch"
                android:text="@string/to_see_films" />


            <Button
                android:id="@+id/rand_films_button"
                style="@style/GridLayoutButtonStyle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_random"
                android:text="@string/rand_films" />


            <Button
                android:id="@+id/edit_profile_button"
                style="@style/GridLayoutButtonStyle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_user"
                android:text="@string/edit_profile" />


            <Button
                android:id="@+id/del_profile_button"
                style="@style/GridLayoutButtonStyle"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_logout"
                android:text="@string/del_profile" />

        </GridLayout>
    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>