<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:padding="10dp"
    android:background="#032c29">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:drawableLeft="@drawable/ic_user"
        android:hint="@string/username_hint"
        android:padding="8dp"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:padding="8dp"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/username"
        android:textColor="@color/gold"
        android:textColorHint="@color/gold"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signin_text"
        android:background="@drawable/button_rounded"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"
        style="@style/ButtonStyle"/>
    <Button
        android:id="@+id/button_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_signup_text"
        android:layout_marginTop="15dp"
        android:background="@drawable/button_rounded"
        android:layout_below="@+id/button_signin"
        style="@style/ButtonStyle"/>


</RelativeLayout>