<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/gold"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <!-- Pole do edycji imienia -->
        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:hint="Imię"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"/>

        <!-- Pole do edycji nazwiska -->
        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:hint="Nazwisko"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"/>

        <!-- Pole do edycji adresu e-mail -->
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/gold"
            android:textColorHint="@color/gold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"/>

        <!-- Przycisk do zmiany zdjęcia profilowego -->
        <Button
            android:id="@+id/zmien"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_pic_edit"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            style="@style/ButtonStyle"/>

        <!-- Przycisk do zapisu zmian -->
        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="16dp"
            android:padding="8dp"
            style="@style/ButtonStyle"/>

    </LinearLayout>

</ScrollView>