<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewUpcoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kavivanar"
                android:text="@string/upcoming_list"
                android:textColor="@color/gold"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recyclerViewUpcoming" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUpcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="50dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerNowPlaying" />

            <TextView
                android:id="@+id/textNowPlaying"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/kavivanar"
                android:text="@string/now_playing_list"
                android:textColor="@color/gold"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recyclerNowPlaying" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerNowPlaying"
                android:paddingTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerViewTopRated" />

            <TextView
                android:id="@+id/textTopRated"
                android:layout_width="373dp"
                android:layout_height="45dp"
                android:fontFamily="@font/kavivanar"
                android:gravity="center"
                android:text="@string/toprated_list"
                android:textColor="@color/gold"
                android:textSize="35dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recyclerViewTopRated" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTopRated"
                android:paddingTop="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="50dp"
                android:layout_marginEnd="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

            <TextView
                android:id="@+id/textPopular"
                android:layout_width="265dp"
                android:layout_height="46dp"
                android:fontFamily="@font/kavivanar"
                android:gravity="center"
                android:text="@string/popular_list"
                android:textColor="@color/gold"
                android:textSize="35dp"
                android:textStyle="bold"
                android:typeface="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/recyclerView" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="1dp"
                android:paddingTop="50dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>